--- a/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
@@ -9,4 +9,10 @@ location / {
         add_header Pragma public;
         add_header Cache-Control "public";
     }
+    # Be rediculous and use http2 push for an extra 0.25ms savings ;P
+    # This is not workign right now.
+    location /index.html {
+        http2_push /rest/meetings?order=begins_at;
+        http2_push /auth/me;
+    }
 }
