--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -44,6 +44,10 @@ http {
     ssl_session_timeout 1d;
     ssl_session_tickets off;
 
+
+    upstream certbot {
+        server certbot;
+    }
     # HTTP server
     server {
         listen 80 default_server;
@@ -51,10 +55,7 @@ http {
         set_by_lua_block $fqdn  { return os.getenv('FQDN') or "0" }
 
        location /.well-known {
-           # Note that a request for /.well-known/test.html will
-           # look for /var/www/ssl-proof/rancher/.well-known/test.html
-           # and not /var/www/ssl-proof/rancher/test.html
-           root /var/www/letsencrypt-domain-proof/$fqdn/;
+	   proxy_pass http://certbot;
        }
 
        location / {
@@ -65,33 +66,20 @@ http {
     # HTTPS server
     server {
         #expose external env vars as internal nginx variables
-        set_by_lua_block $development  { return os.getenv('DEVELOPMENT') or "0" }
-        set_by_lua_block $cache_bypass { return os.getenv('CACHE_BYPASS') or "0" }
-
         listen 443 default_server ssl http2;
 
         server_name _;
         charset utf-8;
         uninitialized_variable_warn off;
 
-        ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/${FQDN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${FQDN}/privkey.pem;
         
-        #depending the env (production/development) switch between log formats
-        #for production this section can be removed
-        set $log_development 0;
-        set $log_production 0;
-        if ($development = "1") {
-            set $log_development 1;
+        access_log logs/access.log combined;
+        location /.well-known {
+	   proxy_pass http://certbot;
         }
-        if ($development = "0") {
-            set $log_production 1;
-        }
-
-        access_log logs/access.log combined    if=$log_production;
-        access_log logs/access.log development if=$log_development;
         
-
         include includes/http/server/*.conf;
     }
 
