http2 push favicon

--- a/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
@@ -14,5 +14,6 @@ location / {
     location /index.html {
         http2_push /rest/meetings?order=begins_at;
         http2_push /auth/me;
+        http2_push /favicon.ico;
     }
 }
