--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -1,4 +1,5 @@
 include includes/globals/*.conf;
+
 worker_processes  1;
 events {
     worker_connections  1024;
@@ -6,11 +7,16 @@ events {
 
 http {
     include includes/http/*.conf;
-
     include mime.types;
-    # a shorter log format for development
-    log_format development '[$time_local] "$request" $status $body_bytes_sent "$request_time ms"';
+    default_type application/octet-stream;
     
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    server_tokens off;
+
     # For websockets
     map $http_upgrade $connection_upgrade {
         default upgrade;
@@ -20,13 +26,14 @@ http {
     ##
     # Gzip Settings
     ##
-
     gzip on;
     gzip_disable "msie6";
     gzip_vary on;
     gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
     gzip_http_version 1.1;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_types text/plain text/css application/json application/vnd.pgrst.object+json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
     ##
     # SSL Settings, most of this is from https://ssl-config.mozilla.org/ and
