Can't push the /auth/me route because cookies aren't sent

--- a/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
@@ -13,7 +13,9 @@ location / {
     # This is not workign right now.
     location /index.html {
         http2_push /rest/meetings?order=begins_at;
-        http2_push /auth/me;
+        # Can't push /auth/me because it looks like cookies
+        # aren't send along. Bummer.
+        # http2_push /auth/me;
         http2_push /favicon.ico;
     }
 }
