Remove unused env variables from openresty

--- a/docker-compose.base.yaml
+++ b/docker-compose.base.yaml
@@ -67,8 +67,8 @@ services:
     restart: on-failure
     environment:
       - FQDN=${FQDN}
-      - JWT_SECRET=${JWT_SECRET}
-      - DEVELOPMENT=${DEVELOPMENT}
+      # - JWT_SECRET=${JWT_SECRET}
+      # - DEVELOPMENT=${DEVELOPMENT}
       - POSTGREST_HOST=${POSTGREST_HOST}
       - POSTGREST_PORT=${POSTGREST_PORT}
       - AUTHAPP_HOST=${AUTHAPP_HOST}
@@ -77,12 +77,12 @@ services:
       - ELMCLIENT_PORT=${ELMCLIENT_PORT}
       - SHAREDTERMINAL_PORT=${SHAREDTERMINAL_PORT}
       - SHAREDTERMINAL_HOST=${SHAREDTERMINAL_HOST}
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_NAME=${DB_NAME}
-      - DB_SCHEMA=${DB_SCHEMA}
-      - DB_USER=${DB_USER}
-      - DB_PASS=${DB_PASS}
+      # - DB_HOST=${DB_HOST}
+      # - DB_PORT=${DB_PORT}
+      # - DB_NAME=${DB_NAME}
+      # - DB_SCHEMA=${DB_SCHEMA}
+      # - DB_USER=${DB_USER}
+      # - DB_PASS=${DB_PASS}
       - SWAGGER_JWT=${SWAGGER_JWT}
       - SWAGGER_INFO_TITLE=${SWAGGER_INFO_TITLE}
       - SWAGGER_INFO_DESCRIPTION=${SWAGGER_INFO_DESCRIPTION}
