--- a/openresty/nginx/conf/includes/globals/env_vars.conf
+++ b/openresty/nginx/conf/includes/globals/env_vars.conf
@@ -10,16 +10,16 @@ env SHAREDTERMINAL_HOST;
 env SHAREDTERMINAL_PORT;
 env ELMCLIENT_HOST;
 env ELMCLIENT_PORT;
-env JWT_SECRET;
+# env JWT_SECRET;
 
-env DB_SCHEMA;
-env DB_HOST;
-env DB_PORT;
-env DB_NAME;
-env DB_USER;
-env DB_PASS;
+# env DB_SCHEMA;
+# env DB_HOST;
+# env DB_PORT;
+# env DB_NAME;
+# env DB_USER;
+# env DB_PASS;
 
-env DEVELOPMENT;
+# env DEVELOPMENT;
 env SWAGGER_JWT;
 env SWAGGER_INFO_TITLE;
 env SWAGGER_INFO_DESCRIPTION;
