Hide server header

--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -16,6 +16,12 @@ http {
     keepalive_timeout 65;
     types_hash_max_size 2048;
     server_tokens off;
+    # See https://github.com/openresty/headers-more-nginx-module#readme,
+    # which is bundled with openresty https://openresty.org/en/components.html
+    more_set_headers 'Server:';
+
+    # Hide upstream proxy headers, if any
+    proxy_hide_header X-Powered-By;
 
     # For websockets
     map $http_upgrade $connection_upgrade {
