Add long expires headers to favicon and also produce it in development

--- a/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
@@ -18,4 +18,9 @@ location / {
         # http2_push /auth/me;
         http2_push /favicon.ico;
     }
+    location /favicon.ico {
+        expires max;
+        add_header Pragma public;
+        add_header Cache-Control "public";
+    }
 }
