--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,6 +1,5 @@
-version: '3.4'
+version: "3.4"
 services:
-
   # This is the database to which the all the other components in the stack will connect and interact with
   # (but mostly it's PostgREST that is going to be responsible for the bulk of the db traffic)
   # Having the database in a container is very convinient in development but in production you will
@@ -30,7 +29,6 @@ services:
     volumes:
       - "./db/src:/docker-entrypoint-initdb.d"
 
-
   mockcas:
     build: mockcas
     # Set the location where docker will put our files
@@ -48,7 +46,6 @@ services:
       - "./mockcas/src:/opt/app/src"
       - "./mockcas/run.sh:/opt/app/run.sh"
     entrypoint: "/opt/app/run.sh"
-
 
   authapp:
     build: authapp
@@ -70,7 +67,7 @@ services:
       # The express app will likely manage some of our JWT signing
       # because we want to use Yale CAS auth infront of our app so
       # that we can avoid storing passwords.
-      # - JWT_SECRET=${JWT_SECRET}  
+      # - JWT_SECRET=${JWT_SECRET}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
       - SESSION_SECRET=${AUTHAPP_SESSION_SECRET}
@@ -97,6 +94,46 @@ services:
     # The script that is run to start our process.
     entrypoint: "/app/run.sh"
 
+  authapp2:
+    build: authapp2
+    # Set the location where docker will put our files
+    working_dir: /app
+    # Map port 8082 on our host to port 4000 inside the container.
+    # Our node app should then run on port 4000 inside the container.
+    ports:
+      - "127.0.0.1:8082:${AUTHAPP_PORT}"
+    # Link this app to the `db` app so that we can talk to postgres
+    # when we need to do so. We might also want to talk to the rest
+    # API directly, and we'll need to add that if so.
+    links:
+      - redis:redis
+      - mockcas:mockcas
+
+    environment:
+      - PORT=${AUTHAPP_PORT}
+      - DB_URI=postgres://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - SESSION_SECRET=${AUTHAPP_SESSION_SECRET}
+      - DEVELOPMENT=${DEVELOPMENT}
+      - CAS_HOST=${AUTHAPP_CAS_HOST}
+      - CAS_SERVICE_VALIDATE_HOST=${AUTHAPP_CAS_SERVICE_VALIDATE_HOST}
+      - CAS_PROTOCOL=${AUTHAPP_CAS_PROTOCOL}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_SCHEMA=${DB_SCHEMA}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${AUTHAPP_DB_USER}
+      - DB_PASS=${AUTHAPP_DB_PASS}
+      - JWT_SECRET=${JWT_SECRET}
+
+    volumes:
+      - "./authapp2/src:/app/src"
+      - "./authapp2/run.sh:/app/run.sh"
+      - "./authapp2/Cargo.toml:/app/Cargo.toml"
+      - "./authapp2/Cargo.lock:/app/Cargo.lock"
+    # The script that is run to start our process.
+    entrypoint: "/app/run.sh"
   #sharedterminal:
   #  build: sharedterminal
   #  environment:
