--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,6 @@
         "indent": ["error", 4],
         "no-console": 2,
         "require-jsdoc": 2,
-        "valid-jsdoc": 2,
-        "space-before-function-paren": 0
+        "valid-jsdoc": 2
     }
 }
