--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "babel-preset-latest": "^6.24.1",
         "dirty-chai": "^2.0.1",
         "dotenv": "4.0.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-prettier": "^3.1.3",
         "mocha": "^6.1.4",
         "should": "^11.2.0",
         "supertest": "^3.4.2"
