--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -16,37 +16,37 @@
     },
     "dependencies": {
         "ace-css": "^1.1.0",
-        "autoprefixer": "^9.6.0",
-        "bootstrap-sass": "^3.3.7",
-        "compression-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^5.0.3",
-        "css-loader": "^3.0.0",
+        "autoprefixer": "^9.7.6",
+        "bootstrap-sass": "^3.4.1",
+        "compression-webpack-plugin": "^3.1.0",
+        "copy-webpack-plugin": "^5.1.1",
+        "css-loader": "^3.5.3",
         "cssnano": "^4.1.10",
-        "elm": "^0.19.0-no-deps",
-        "elm-format": "^0.8.1",
+        "elm": "^0.19.1-3",
+        "elm-format": "^0.8.3",
         "elm-github-install": "^1.6.1",
-        "elm-webpack-loader": "^5.0.0",
-        "file-loader": "^4.0.0",
+        "elm-webpack-loader": "^6.0.1",
+        "file-loader": "^6.0.0",
         "foreman": "^3.0.1",
         "html-webpack-inline-source-plugin": "0.0.10",
-        "html-webpack-plugin": "^3.2.0",
+        "html-webpack-plugin": "^4.3.0",
         "jquery": "^3.5.0",
-        "json-server": "^0.15.0",
+        "json-server": "^0.16.1",
         "milligram-scss": "^1.3.0",
-        "mini-css-extract-plugin": "^0.7.0",
-        "node-sass": "^4.7.2",
+        "mini-css-extract-plugin": "^0.9.0",
+        "node-sass": "^4.14.0",
         "postcss-import": "^12.0.1",
         "postcss-loader": "^3.0.0",
-        "postcss-preset-env": "^6.6.0",
-        "rimraf": "^2.6.2",
-        "sass-loader": "^7.1.0",
-        "source-code-pro": "^2.30.1",
-        "style-loader": "^0.23.1",
+        "postcss-preset-env": "^6.7.0",
+        "rimraf": "^3.0.2",
+        "sass-loader": "^8.0.2",
+        "source-code-pro": "^2.30.2",
+        "style-loader": "^1.2.1",
         "sugarss": "^2.0.0",
-        "url-loader": "^2.0.0",
-        "webpack": "^4.34.0",
-        "webpack-cli": "^3.3.4",
-        "webpack-dev-server": "^3.7.2",
-        "webpack-merge": "^4.1.1"
+        "url-loader": "^4.1.0",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3",
+        "webpack-merge": "^4.2.2"
     }
 }
