--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-    "name": "starter-kit",
+    "name": "yelukerest",
+    "engines": {
+        "node": "12"
+    },
     "dependencies": {
         "chai": "^4.2.0",
         "chai-as-promised": "^7.1.1",
         "chai-string": "^1.5.0",
-        "elm": "^0.19.0-no-deps",
-        "elm-format": "^0.8.1",
-        "eslint": "^4.19.1",
-        "eslint-config-airbnb-base": "^12.1.0",
-        "eslint-plugin-import": "^2.18.0",
+        "eslint": "^7.0.0",
+        "eslint-config-airbnb-base": "^14.1.0",
+        "eslint-plugin-import": "^2.20.2",
         "expect-cookies": "^0.1.2",
-        "lodash": "^4.17.14",
-        "npm": "^6.13.4",
-        "subzero-cli": "^0.1.36"
+        "lodash": "^4.17.15",
+        "npm": "^6.14.5",
+        "subzero-cli": "^0.1.41"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
         "babel-preset-latest": "^6.24.1",
         "dirty-chai": "^2.0.1",
-        "dotenv": "4.0.0",
-        "mocha": "^6.1.4",
-        "should": "^11.2.0",
-        "supertest": "^3.4.2"
+        "dotenv": "^8.2.0",
+        "mocha": "^7.1.2",
+        "should": "^13.2.3",
+        "supertest": "^4.0.2"
     },
     "scripts": {
         "test_rest": "mocha --recursive ./tests/rest/",
