--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
         "test_db": "( set -a && . ./.env && set +a && docker run -i -t --rm --name pgtap --net ${COMPOSE_PROJECT_NAME}_default --link ${COMPOSE_PROJECT_NAME}_db_1:db -v $(pwd)/tests/db/:/test -e HOST=$DB_HOST -e DATABASE=$DB_NAME -e USER=$SUPER_USER -e PASSWORD=$SUPER_USER_PASSWORD lren/pgtap )",
         "test": "npm run test_db && npm run test_rest"
     },
-    "author": "ruslan.talpa@subzero.cloud",
-    "license": "ISC"
+    "author": "kyle.jensen@yale.edu",
+    "license": "Varied"
 }
