--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "babel-preset-latest": "^6.24.1",
         "dirty-chai": "^2.0.1",
         "dotenv": "^8.2.0",
+        "eslint-plugin-mocha": "^6.3.0",
         "mocha": "^7.1.2",
         "should": "^13.2.3",
         "supertest": "^4.0.2"
