Hello world with redis

--- a/openresty/nginx/conf/includes/globals/env_vars.conf
+++ b/openresty/nginx/conf/includes/globals/env_vars.conf
@@ -23,3 +23,7 @@ env ELMCLIENT_PORT;
 env SWAGGER_JWT;
 env SWAGGER_INFO_TITLE;
 env SWAGGER_INFO_DESCRIPTION;
+
+# env REDIS_HOST;
+# env REDIS_PORT;
+# env JWT_SECRET;
