--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -108,6 +108,14 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/${FQDN}/privkey.pem;
         
         access_log logs/access.log combined;
+
+        # Sessions with Redis. See
+        # https://github.com/bungle/lua-resty-session
+        set $session_storage redis;
+        set $session_secret ${SESSION_SECRET};
+        set $session_redis_host ${REDIS_HOST};
+        set $session_redis_port ${REDIS_PORT};
+
         location /.well-known {
 	        proxy_pass http://certbot;
         }
