--- a/openresty/nginx/conf/includes/http/init_lua.conf
+++ b/openresty/nginx/conf/includes/http/init_lua.conf
@@ -1,4 +1,4 @@
 # set search paths for pure Lua external libraries (';;' is the default path):
-lua_package_path '${prefix}../lualib/user_code/?.lua;;';
+lua_package_path '${prefix}../lualib/user_code/?.lua;${prefix}../lualib/user_code/lua-resty-session/lib/?.lua;;';
 init_by_lua_file '../lualib/user_code/init_phase.lua';
 #lua_code_cache off;
