Store tickets in shm and do redirect

--- a/openresty/nginx/conf/includes/dev/http/server/dev.conf
+++ b/openresty/nginx/conf/includes/dev/http/server/dev.conf
@@ -1,3 +1,3 @@
 # Locations we only want to load in development.
 # See entrypoint.sh.
-include includes/dev/locations/*.conf;
+include includes/dev/http/server/locations/*.conf;
