--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -78,6 +78,8 @@ http {
     ssl_stapling_verify on;
     ssl_trusted_certificate /etc/letsencrypt/live/${FQDN}/fullchain.pem;
 
+    ${NGINX_HTTP_DEV_INCLUDES}
+
     upstream certbot {
         server certbot;
     }
