--- a/openresty/nginx/conf/includes/dev/http/server/locations/mockcas.conf
+++ b/openresty/nginx/conf/includes/dev/http/server/locations/mockcas.conf
@@ -3,10 +3,17 @@ location /cas/ {
     # MIME type determined by default_type:
     default_type 'text/html';
 
-    location /cas/ {
+    location /cas/login {
         content_by_lua_block {
             local mockcas = require "mockcas"
-            return mockcas.cas_login_form()
+            return mockcas.login()
         }
     }
+    location /cas/serviceValidate {
+        content_by_lua_block {
+            local mockcas = require "mockcas"
+            return mockcas.service_validate()
+        }
+    }
+ 
 }
