Vendor deps, basic login WIP

--- a/openresty/nginx/conf/includes/dev/http/server/dev.conf
+++ b/openresty/nginx/conf/includes/dev/http/server/dev.conf
@@ -1,3 +1,7 @@
+
+# set development variable
+set $development "true";
+
 # Locations we only want to load in development.
 # See entrypoint.sh.
 include includes/dev/http/server/locations/*.conf;
