--- a/openresty/nginx/conf/includes/http/server/locations/authapp.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/authapp.conf
@@ -4,12 +4,20 @@ location /auth/ {
     # MIME type determined by default_type:
     default_type 'text/html';
 
+    location /auth/login {
+        access_by_lua_block { require('cas').forceAuthentication() }
+        content_by_lua '
+            ngx.say("<html><body>You got through! Looks like you are *", ngx.var.http_remote_user, "*</html>")
+        ';
+    }
+
     location /auth/cas {
         access_by_lua_block { require('cas').forceAuthentication() }
         content_by_lua '
             ngx.say("<html><body>You got through!</html>")
         ';
     }
+
 
     location /auth/ {
         content_by_lua '
