--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -9,6 +9,10 @@ http {
     include includes/http/*.conf;
     include mime.types;
     default_type application/octet-stream;
+
+    # Use the built-in Docker DNS resolver
+    # resolver 127.0.0.11 ipv6=off;
+    resolver 127.0.0.11 ipv6=off;
     
     sendfile on;
     tcp_nopush on;
@@ -77,8 +81,14 @@ http {
     ssl_stapling on;
     ssl_stapling_verify on;
     ssl_trusted_certificate /etc/letsencrypt/live/${FQDN}/fullchain.pem;
+    lua_ssl_trusted_certificate /etc/letsencrypt/live/${FQDN}/fullchain.pem;
+    # lua_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.pem;
+    lua_ssl_verify_depth 0;
 
     ${NGINX_HTTP_DEV_INCLUDES}
+
+    # Set up session store
+    lua_shared_dict cas_store 1M;
 
     upstream certbot {
         server certbot;
