Clean up CAS client for my particular usage

--- a/openresty/nginx/conf/includes/http/server/locations/authapp.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/authapp.conf
@@ -4,74 +4,31 @@ location /auth/ {
     # MIME type determined by default_type:
     default_type 'text/html';
 
+    # We are going to 
+    set $session_cookie_path /auth/login/;
+    # Allow cookies to persist after the browser is closed
+    set $session_cookie_persistent on;
+    # Cookies expire in 1 week
+    set $session_cookie_renew 604800;
+
+    # The purpose of this route is to get authorized users 
+    # a session cookie. If they don't have a valid session
+    # cookie when they visit, they will be redirected to a
+    # CAS server for authentication. The session cookie is
+    # scoped to this path so that the cookie is not sent 
+    # during other requests that their browser makes. 
     location /auth/login {
         access_by_lua_block { require('cas').forceAuthentication() }
         content_by_lua '
-            ngx.say("<html><body>You got through! Looks like you are *", ngx.var.http_remote_user, "*</html>")
+            ngx.say("<html><body>You got through! Looks like you are *", ngx.ctx.netid or "Anonymous", "*</html>")
         ';
     }
+    location /auth/logout {
+        content_by_lua_block{
+            local cas = require('cas')
+            cas.logout()
+            ngx.say('You are logged out')
 
-    location /auth/cas {
-        access_by_lua_block { require('cas').forceAuthentication() }
-        content_by_lua '
-            ngx.say("<html><body>You got through!</html>")
-        ';
+        }
     }
-
-
-    location /auth/ {
-        content_by_lua '
-            ngx.say("<html><body><a href=/auth/start>Start the test</a>!</body></html>")
-        ';
-    }
-    location /auth/start {
-        content_by_lua '
-            local session = require "resty.session".start()
-            session.data.name = "OpenResty Fan"
-            session:save()
-            ngx.say("<html><body>Session started. ",
-                    "<a href=/auth/test>Check if it is working</a>!</body></html>")
-        ';
-    }
-    location /auth/test {
-        content_by_lua '
-            local session = require "resty.session".open()
-            ngx.say("<html><body>Session was started by <strong>",
-                    session.data.name or "Anonymous",
-                    "</strong>! <a href=/auth/modify>Modify the session</a>.</body></html>")
-        ';
-    }
-    location /auth/modify {
-        content_by_lua '
-            local session = require "resty.session".start()
-            session.data.name = "Lua Fan"
-            session:save()
-            ngx.say("<html><body>Session modified. ",
-                    "<a href=/auth/modified>Check if it is modified</a>!</body></html>")
-        ';
-    }
-    location /auth/modified {
-        content_by_lua '
-            local session = require "resty.session".open()
-            ngx.say("<html><body>Session was modified by <strong>",
-                    session.data.name or "Anonymous",
-                    "</strong>! <a href=/auth/destroy>Destroy the session</a>.</body></html>")
-        ';
-    }
-    location /auth/destroy {
-        content_by_lua '
-            require "resty.session".destroy()
-            ngx.say("<html><body>Session was destroyed. ",
-                    "<a href=/auth/check>Is it really so</a>?</body></html>")
-        ';
-    }
-    location /auth/check {
-        content_by_lua '
-            local session = require "resty.session".open()
-            ngx.say("<html><body>Session was really destroyed, you are known as ",
-                    "<strong>",
-                    session.data.name or "Anonymous",
-                    "</strong>! <a href=/auth/>Start again</a>.</body></html>")
-        ';
-}
 }
