Handle redirect when the user successfully authenticates

--- a/openresty/nginx/conf/includes/http/server/locations/authapp.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/authapp.conf
@@ -18,10 +18,12 @@ location /auth/ {
     # scoped to this path so that the cookie is not sent 
     # during other requests that their browser makes. 
     location /auth/login {
-        access_by_lua_block { require('cas').forceAuthentication() }
-        content_by_lua '
-            ngx.say("<html><body>You got through! Looks like you are *", ngx.ctx.netid or "Anonymous", "*</html>")
-        ';
+        access_by_lua_block {
+            require('cas').forceAuthentication()
+        }
+        content_by_lua_block {
+            require('cas').redirect_to_next()
+        }
     }
     location /auth/logout {
         content_by_lua_block{
