Finish alpha of lua authapp

--- a/docker-compose.base.yaml
+++ b/docker-compose.base.yaml
@@ -74,6 +74,7 @@ services:
             - POSTGREST_PORT=${POSTGREST_PORT}
             - AUTHAPP_HOST=${AUTHAPP_HOST}
             - AUTHAPP_PORT=${AUTHAPP_PORT}
+            - AUTHAPP_JWT=${AUTHAPP_JWT}
             - ELMCLIENT_HOST=${ELMCLIENT_HOST}
             - ELMCLIENT_PORT=${ELMCLIENT_PORT}
             - SHAREDTERMINAL_PORT=${SHAREDTERMINAL_PORT}
