--- a/openresty/nginx/conf/includes/http/server/locations/authapp.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/authapp.conf
@@ -19,7 +19,7 @@ location /auth/ {
     # during other requests that their browser makes. 
     location /auth/login {
         access_by_lua_block {
-            require('cas').forceAuthentication()
+            require('cas').force_authentication()
         }
         content_by_lua_block {
             require('cas').redirect_to_next()
@@ -30,7 +30,15 @@ location /auth/ {
             local cas = require('cas')
             cas.logout()
             ngx.say('You are logged out')
-
+        }
+    }
+    location /auth/jwt {
+        access_by_lua_block {
+            require('cas').require_authentication()
+        }
+        content_by_lua_block{
+            local authapp = require('authapp')
+            authapp.get_jwt(ngx.ctx.netid)
         }
     }
 }
