--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -88,7 +88,7 @@ http {
     ${NGINX_HTTP_DEV_INCLUDES}
 
     # Set up session store
-    lua_shared_dict cas_store 1M;
+    lua_shared_dict sessions 1m;
 
     upstream certbot {
         server certbot;
@@ -121,12 +121,16 @@ http {
         
         access_log logs/access.log combined;
 
-        # Sessions with Redis. See
+        # Use shared memory for sessions
         # https://github.com/bungle/lua-resty-session
-        set $session_storage redis;
-        set $session_secret ${SESSION_SECRET};
-        set $session_redis_host ${REDIS_HOST};
-        set $session_redis_port ${REDIS_PORT};
+        set $session_storage shm;
+        set $session_shm_store         sessions;
+        set $session_shm_uselocking    on;
+        set $session_shm_lock_exptime  30;    # (in seconds)
+        set $session_shm_lock_timeout  5;     # (in seconds)
+        set $session_shm_lock_step     0.001; # (in seconds)
+        set $session_shm_lock_ratio    2;
+        set $session_shm_lock_max_step 0.5;   # (in seconds)
 
         location /.well-known {
 	        proxy_pass http://certbot;
