--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "supertest": "^4.0.2"
     },
     "scripts": {
-        "test_rest": "mocha --recursive ./tests/rest/",
+        "test_rest": "mocha -s 1000 --recursive ./tests/rest/",
         "test_db": "( set -a && . ./.env && set +a && docker run -i -t --rm --name pgtap --net ${COMPOSE_PROJECT_NAME}_default --link ${COMPOSE_PROJECT_NAME}_db_1:db -v $(pwd)/tests/db/:/test -e HOST=$DB_HOST -e DATABASE=$DB_NAME -e USER=$SUPER_USER -e PASSWORD=$SUPER_USER_PASSWORD lren/pgtap )",
         "test": "npm run test_db && npm run test_rest"
     },
