Add /auth/me route

--- a/openresty/nginx/conf/includes/http/server/locations/authapp.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/authapp.conf
@@ -4,6 +4,11 @@ location /auth/ {
     # MIME type determined by default_type:
     default_type 'text/html';
 
+    # We're only allowing GET requests
+    limit_except GET {
+        deny  all;
+    }
+
     # We are going to 
     set $session_cookie_path /auth/login/;
     # Allow cookies to persist after the browser is closed
@@ -39,6 +44,15 @@ location /auth/ {
         content_by_lua_block{
             local authapp = require('authapp')
             authapp.get_jwt(ngx.ctx.netid)
+        }
+    }
+    location /auth/me {
+        access_by_lua_block {
+            require('cas').require_authentication()
+        }
+        content_by_lua_block{
+            local authapp = require('authapp')
+            authapp.get_me(ngx.ctx.netid)
         }
     }
 }
